[project]
name = "tron-wallets"
version = "0.1.0"
readme = "README.md"
requires-python = "==3.13.0"
dependencies = [
    "fastapi==0.115.7",
    "uvicorn==0.34.0",
    "pydantic==2.10.6",
    "SQLAlchemy==2.0.37",
    "asyncpg==0.30.0",
    "aiohttp==3.11.11",
    "fastapi-limiter==0.1.6",

    "pytest==8.3.4",
    "pytest-asyncio==0.25.2",
    "asgi-lifespan==2.1.0",
]